tests/error/u8_literal_out_of_range.vow
// TEST: error-code LiteralOutOfRange
// TEST: stderr "literal 300 does not fit in u8"
module U8LiteralOutOfRange

fn main() -> i32 {
    let x: u8 = 300;
    0
}
